src/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');

:root {
   --transparent: #000000d4;
}

#content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   height: 100vh;
   background-image: url('../images/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   font-family: 'Josefin Sans', sans-serif;
}

#header {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 10vh;
   color: #fef2f2;
   background-color: var(--transparent);
   width: 100%;
   font-size: 1.5rem;
}

#tabs {
   display: flex;
   gap: 4rem;
}

#main {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   /* background-color: var(--transparent); */
}

.footer {
   background-color: var(--transparent);
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 5vh;
   color: #fef2f2;
   gap: 2rem;
}

#welcome {
   font-size: 3rem;
   font-family: 'Great Vibes', cursive;
}

#main-txt {
   font-weight: 500;
   font-size: 3rem;
}

#home-paragraph {
   font-size: 1.5rem;
}

#text-section {
   text-align: center;
   color: #fef2f2;
   background-color: var(--transparent);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1.6rem;
   padding: 2rem;
}

#home-img {
   height: 350px;
   border-radius: 50%;
}

.tab {
   cursor: pointer;
   padding: 0.5rem 0;

   transition: transform 0.3s;
}

.active-tab {
   border-bottom: #fef2f2 2px solid;
}

.tab:hover {
   transform: translateY(-5px);
}

.menu-item {
   color: #fef2f2;
   background-color: var(--transparent);
   min-width: 300px;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 1fr 1fr;
   align-items: center;
   justify-items: start;
   gap: 0.2rem;
}

#menu-container {
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 1rem;
   width: 40vw;
   padding: 2rem;
}

.item-img {
   height: 150px;
   border-radius: 50%;
   grid-row: 1/3;
   padding: 1rem;
}

.item-description {
   grid-column: 2/4;
}

